[aix] in mmap mode, os::attempt_reserve_memory_at() fails to handle wrong mapping address

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 17
    • Affects Version/s: 11, 16, 17
    • Component/s: hotspot
    • b21
    • aix

      On AIX, in mmap() mode, if the mmap call succeeds but not at the requested address, the mapping should be unmapped and the operation should count as error - like it is done on all other platforms.

      (AFAICS this is a day zero bug in our port - mmap mode is seldomly used).

            Assignee:
            Thomas Stuefe
            Reporter:
            Thomas Stuefe
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: